<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/on_board_title_current_height"
                android:textColor="@color/colorPrimaryText"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/relLay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtViewTitle"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="70dp">

                <EditText
                    android:id="@+id/editTxtWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:background="@drawable/af_border_box"
                    android:inputType="numberSigned"
                    android:textSize="12pt" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12pt"
                    android:text="@string/target_height_imperial" />
            </LinearLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relLay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:paddingStart="70sp"
                android:paddingLeft="70sp"
                android:paddingEnd="70sp"
                android:paddingRight="70sp"
                android:text="@string/button_next"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>