<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MealListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_10dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:layout_marginRight="@dimen/value_10dp"
            android:gravity="center_vertical"
            android:text="@string/meal_breakfast"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/breakfastRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_10dp"
            android:paddingTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:scrollbars="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_10dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:layout_marginRight="@dimen/value_10dp"
            android:gravity="center_vertical"
            android:text="@string/meal_lunch"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/lunchRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_10dp"
            android:paddingTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:scrollbars="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_10dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:layout_marginRight="@dimen/value_10dp"
            android:gravity="center_vertical"
            android:text="@string/meal_dinner"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/dinnerRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_10dp"
            android:paddingTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:scrollbars="none" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>